# cnn_example

./: .gitignore  CMakeLists.txt  TODO.txt  readme.txt
include/: connection.hpp  connector.hpp  functions.hpp  layer.hpp  mnist.hpp  neuron.hpp  nn.hpp  optimizer.hpp  sparse_array.hpp  typedef.hpp  utils.hpp  weights.hpp
python/: converter_mnist.py  test_cnn2.py  test_cnn_hand.py  test_pytorch.py  test_tf.py
src/: CMakeLists.txt  functions.cpp  mnist.cpp  utils.cpp
src/boost-archive-yaml/: README.md  basic_yml_archive.hpp  basic_yml_grammar.hpp  basic_yml_iarchive.hpp  yml_archive_exception.hpp  yml_iarchive.hpp  yml_oarchive.hpp
src/boost-archive-yaml/impl/: basic_oarchive.cpp  basic_text_oprimitive.cpp
src/boost-archive-yaml/test/: .dep  makefile  readme.txt  test_istream.cpp  test_ostream.cpp
test/: CMakeLists.txt  test_boost_ver.cpp  test_cnn2.cpp  test_cnn2_import.cpp  test_cnn3.cpp  test_cnn4.cpp  test_cnn5.cpp  test_cnn6.cpp  test_compression.cpp  test_connection.cpp  test_connector.cpp  test_file_exists.cpp  test_fr_read_linux.cpp  test_ifassign.cpp  test_inheritance.cpp  test_layer.cpp  test_map_archive.cpp  test_matrix.cpp  test_neuron.cpp  test_optimizer.cpp  test_rand.cpp  test_weights.cpp  unordered_map.cpp
test/testinput/: simple_nn.yaml
